[package]
name = "http-tunnel"
version = "0.1.9"
authors = ["Eugene Retunsky"]
license = "MIT"
edition = "2018"
publish = false
readme = "README.md"
repository = "https://github.com/xnuter/http-tunnel"
homepage = "https://github.com/xnuter/http-tunnel"
description = """
HTTP Tunnel Proxy
Based on Eugene Retunsky's http-tunnel example.
"""

[dependencies]
clap = "2"
regex = "1.4"
rand = "0.8"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
serde_regex = "1.1"
humantime-serde = "1.0"
async-trait = "0.1"
strum = "0.20"
strum_macros = "0.20"
derive_builder = "0.9"
log = "0.4"
log4rs = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
bytes = "1"
futures = "0.3"
time = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
