[package]
name = "http-tunnel"
version = "0.2.6"
authors = ["Eugene Retunsky"]
license = "MIT"
edition = "2021"
rust-version = "1.75.0"
publish = false
readme = "README.md"
repository = "https://github.com/xnuter/http-tunnel"
homepage = "https://github.com/xnuter/http-tunnel"
description = """
HTTP Tunnel Proxy
Based on Eugene Retunsky's http-tunnel example.
"""

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "deprecated"] }
regex = "1.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_regex = "1.1"
humantime-serde = "1.1"
log = "0.4"
simplelog = "0.12"
toml = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
bytes = "1"
futures = "0.3"
time = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true

[features]
default = []
plain_text = []
