[package]
name = "http-tunnel"
version = "0.2.6"
authors = ["Eugene Retunsky"]
license = "MIT"
edition = "2021"
rust-version = "1.75.0"
publish = false
readme = "README.md"
repository = "https://github.com/xnuter/http-tunnel"
homepage = "https://github.com/xnuter/http-tunnel"
description = """
HTTP Tunnel Proxy
Based on Eugene Retunsky's http-tunnel example.
"""

[dependencies]
bytes = "1"
futures = "0.3"
humantime-serde = "1.1"
lexopt = "0.3.0"
log = "0.4"
rand = "0.8"
regex-lite = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
simplelog = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true

[features]
default = []
plain_text = []
